Fix titlebar color in dark mode DONTBUILD

--- a/browser/components/companion/content/browser.css
+++ b/browser/components/companion/content/browser.css
@@ -29,7 +29,6 @@
 #companion-box,
 #companion-titlebar {
   width: var(--companion-width);
-  background: var(--companion-background);
 }
 
 #companion-mac-buttonbox                {
